# citylab_project

robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/config/: robot_patrol.rviz
robot_patrol/include/robot_patrol/: direction_service.h  patrol.h
robot_patrol/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_patrol/install/robot_patrol/lib/robot_patrol/: robot_patrol
robot_patrol/install/robot_patrol/share/ament_index/resource_index/parent_prefix_path/: robot_patrol
robot_patrol/install/robot_patrol/share/robot_patrol/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
robot_patrol/install/robot_patrol/share/robot_patrol/config/: robot_patrol.rviz
robot_patrol/install/robot_patrol/share/robot_patrol/launch/: start_patrolling.launch.py
robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_test_service.launch.py
robot_patrol/log/: latest_build
robot_patrol/src/: direction_service.cpp  patrol.cpp  patrol_main.cpp  patrol_with_service.cpp  test_service.cpp
robot_patrol/srv/: GetDirection.srv
